# nyx-lite

./: .gitignore  .gitmodules  Cargo.toml  readme.md  run.sh  ssh-root.sh
dockerimage/: Dockerfile  initscript-fuzz-setup.sh  interfaces.txt
examples/: test_guest_runner.rs  test_swbp.rs
project_docs/: TODO.txt  android  debug_doc.txt  device_model.txt
src/: breakpoints.rs  disassembly.rs  e2e_test_main.rs  error.rs  firecracker_wrappers.rs  hw_breakpoints.rs  lib.rs  main.rs  mem.rs  nyx_vm.rs  snapshot.rs  timer_event.rs  vm_continuation_statemachine.rs
vm_image/: README.md  debug.sh  download_kernel.sh  parse_ptrace.rb  run.sh  setup_networking.sh  vmconfig.json  vmconfig_android.json  vmconfig_android_syzkaller.json  vmconfig_network.json
vm_image/dockerimage/: Dockerfile  build-img.sh  initscript-fuzz-setup.sh  install-docker.sh  key.priv  key.pub
vm_image_android/: working.config
