[package]
name = "firecracker_fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
firecracker = { git = "https://github.com/firecracker-microvm/firecracker" }
vmm = { git = "https://github.com/firecracker-microvm/firecracker" }
utils= { git = "https://github.com/firecracker-microvm/firecracker" }
seccompiler= { git = "https://github.com/firecracker-microvm/firecracker" }
event-manager = "0.4.0"
libc = "0.2.155"
anyhow ="1.0.86"
thiserror="1.0.61"
displaydoc = "0.2.5"
